Changes: - New footer class for inner template without the left-margin so it works inside the main col - New heading class for links to remove underlines on hover on linked h*s in non-Firefox browsers - Fixed width of main column to prevent included content from other sites (Facebook, Google maps) overflowing in viewport widths of 1024 or less (there's probably a better way...?) - Removed text-transform to lower case on link blocks to allow for proper nouns

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,7 +131,7 @@ html,
 }
 
 .s{
-	background-image:url(../img/css/sprites/sprite.png);
+	background-image:url(/ldf/img/css/sprites/sprite.png);
 }
 
 h1,h2,h3,h4,h5,h6,
@@ -212,8 +212,8 @@ html{
 	font-size:0.75em; /* 12px */
 	line-height:1.5; /* 18px */
 	color:#666;
-	background:url(../img/css/page/01.gif) fixed #fff;
-	background:url(../img/css/page/02.gif) fixed #fff;
+	background:url(/ldf/img/css/page/01.gif) fixed #fff;
+	background:url(/ldf/img/css/page/02.gif) fixed #fff;
 	min-height:100%;
 	padding:2%;
 	overflow-y:scroll;
@@ -248,6 +248,7 @@ html{
 	float:left;
 	width:75%;
 	max-width:520px;
+	min-width:520px;
 }
 
 
@@ -261,7 +262,9 @@ html{
     clear:both;
     margin-left:34%;
 }
-
+.small_footer {
+    clear:both;
+}
 
 
 
@@ -293,7 +296,6 @@ Abstraction, as per http://csswizardry.com/2011/09/the-nav-abstraction/
 .link-block a{
 	display:block;
 	color:#666;
-	text-transform:lowercase;
 }
 	.link-block a:hover{
 		text-decoration:none;
@@ -318,8 +320,6 @@ Abstraction, as per http://csswizardry.com/2011/09/the-nav-abstraction/
 	top:0;
 	left:0;
 }
-
-
 
 
 
@@ -399,7 +399,9 @@ a{
 	a:focus{
 		text-decoration:underline;
 	}
-
+	.heading:hover{
+		text-decoration:none;
+	}
 /*--- LISTS ---*/
 ul,ol,blockquote{
 	margin-left:3em;
@@ -530,7 +532,7 @@ td .block .btn{
 	}
 
 .event-cal th{
-	background:url(../img/css/tables/splitter.gif) right top no-repeat;
+	background:url(/ldf/img/css/tables/splitter.gif) right top no-repeat;
 }
 .event-cal thead{
 	background-position:left top;
@@ -595,7 +597,6 @@ hr{
 	border-top:1px solid #dde7b4;
 }
 
-/* This class is minging... */
 .shadow{
     text-shadow:
     -1px -1px 0 #13c115,
